# ucanvcam

./: CMakeLists.txt  COPYING  ChangeLog  DEPENDENCIES.TXT  README  README.TXT  config.h.in  configure
common/: Effect.h  location.cpp  location.h  utils.c  yarpy.cpp  yarpy.h  yeffects.h
conf/: FindDIRECTX.cmake  FindDirectX.cmake
doc/: annotated.html  classEffect-members.html  classEffectGroup-members.html  classEffectGroup.html  classEffects-members.html  classEffects.html  classEngageEffect-members.html  classImageLoader.html  classImageSeq-members.html  classMapCache-members.html  classMapCache.html  classOverlayEffect-members.html  classParamEffect-members.html  classParamEffect.html  classPicmixEffect-members.html  classPicmixEffect.html  classPortEffectTV-members.html  classPortEffectTV.html  classTickerEffect-members.html  classTickerEffect.html  functions_func.html  index.html  install.html  pages.html  windows_tips.html
doc/src/: doxygen.conf  doxygen.conf.in  index.dox
media/: dove_000.ppm  dove_003.ppm  dove_006.ppm  dove_007.ppm  dove_008.ppm  dove_009.ppm  dove_010.ppm  dove_011.ppm  dove_014.ppm  dove_015.ppm  dove_016.ppm  orient.ppm  test.ppm  ucanvcam.xcf
modules/vdub/: Fraction.cpp  VDString.cpp  WinCap.cpp  WinCap.h  cap_dshow.cpp  cap_vfw.cpp  main.cpp  memory.cpp  misc.cpp  pixmaputils.cpp  registry.cpp  text.cpp
modules/vdub/vd2/Kasumi/: pixmap.h
modules/vdub/vd2/Riza/: cap_dshow.h
modules/vdub/vd2/system/: memory.h  vdstl.h  vdtypes.h  vectors.h
src/: CMakeLists.txt
src/activex/: CMakeLists.txt  Dll.cpp  Filters.cpp  Filters.h  YarpOut.h  memy.cpp  memy.h  prop.rc
src/activex/vivek/: Filters.cpp
src/common/: Effect.cpp  Effect.h  EffectGroup.cpp  EffectGroup.h  Effects.cpp  Effects.h  location.cpp  registry_keys.h  screen.h  yarpy.cpp
src/doc/: dox_header.html  doxygen_images.dox  index.dox  install.dox  linux_tips.dox  windows_tips.dox
src/effectv_effects/: matrix.c  puzzle.c
src/gui/: Vcam.h  cmdline.cpp  gui.cpp
src/linux/: VcamLinux.cpp  VcamLinuxStandalone.cpp
src/modules/: CMakeLists.txt
src/modules/vdub/: WinCap.h  cap_dshow.cpp  vfw_extra_from_paulfitz.h
src/modules/vdub/vd2/system/: math.h  registry.h
src/native_effects/: EdgeMan.cpp  EngageEffect.cpp  ImageLoader.cpp  ImageLoader.h  MapCache.h  OverlayEffect.cpp  ParamEffect.cpp  PicmixEffect.cpp  Sailor.h  TickerEffect.cpp  yarpy1.cpp  yarpy1.h
src/win32/: ShmemBus.h  ShmemImage.h  VcamWin.cpp  standalone_windows.cpp
tests/: pf.cpp
trunk/: CMakeLists.txt  ChangeLog  DEPENDENCIES.TXT  README  README.TXT  autogen.sh  config.h.in  configure
trunk/common/: Effect.h  effects.cpp  effects.h  registry.cpp  registry.h  video.h  yarpy.h  yeffects.h
trunk/conf/: FindwxWidgets.cmake  PackageInfo.cmake
trunk/doc/: Installing.html  annotated.html  classEffect.html  classEffectGroup-members.html  classEngageEffect.html  classImageLoader-members.html  classImageSeq.html  classOverlayEffect.html  classParamEffect-members.html  classParamEffect.html  classPortEffectTV-members.html  classPortEffectTV.html  classTickerEffect-members.html  classTickerEffect.html  classyarp_1_1dev_1_1DriverCollection-members.html  classyarp_1_1dev_1_1DriverCollection.html  doxygen_images.html  functions.html  functions_func.html  hierarchy.html  install.html  linux_tips.html  pages.html
trunk/doc/src/: doxygen.conf  doxygen.conf.in
trunk/effects/: TickerEffect.cpp
trunk/effectv/: chameleon.c
trunk/media/: aime.ppm  dove_001.ppm  dove_002.ppm  dove_004.ppm  dove_005.ppm  dove_012.ppm  dove_013.ppm  dove_017.ppm  rose.ppm
trunk/media/pm/: effect.ini
trunk/modules/: CMakeLists.txt
trunk/modules/vdub/: CMakeLists.txt  Error.cpp  VDString.cpp  WinCap.cpp  bitmap.cpp  cap_dshow.cpp  memory.cpp  misc.h  text.cpp
trunk/modules/vdub/vd2/Kasumi/: pixmaputils.h
trunk/modules/vdub/vd2/Riza/: bitmap.h  capdriver.h
trunk/modules/vdub/vd2/system/: Fraction.h  VDString.h  math.h  memory.h  vdtypes.h
trunk/src/: CMakeLists.txt
trunk/src/activex/: CMakeLists.txt  Dll.cpp  DllDbg.h  Filters.cpp  Filters.h  UVCam.cpp  YarpOut.h  memy.cpp  prop.rc  resources.h
trunk/src/activex/vivek/: Dll.cpp
trunk/src/common/: EffecTV.h  Effect.h  EffectGroup.cpp  EffectGroup.h  Effects.cpp  Effects.h  location.cpp  location.h  registry.cpp  registry_keys.h  screen.h  utils.c  yarpy.h  yeffects.h
trunk/src/doc/: dox_header.html  doxygen.conf.in  install.dox
trunk/src/effectv_effects/: pup.c  shagadelic.c  spiral.c
trunk/src/gui/: Vcam.cpp  Vcam.h  cmdline.cpp  gui.cpp
trunk/src/linux/: VcamLinux.cpp  linux_loopback.cpp  standalone_linux.cpp
trunk/src/modules/: CMakeLists.txt  ISourceLister.h
trunk/src/modules/vdub/: WinCap.cpp  bitmap.cpp  cap_dshow.cpp  cap_vfw.cpp  registry.cpp
trunk/src/modules/vdub/vd2/Riza/: capdriver.h
trunk/src/modules/vdub/vd2/system/: Fraction.h  VDString.h  vdstl.h
trunk/src/native_effects/: EdgeMan.cpp  EdgeMan.h  EngageEffect.cpp  ImageLoader.cpp  ImageLoader.h  ImgTrack.h  ParamEffect.cpp  PicmixEffect.cpp  TickerEffect.cpp
trunk/src/win32/: ShmemBus.h  ShmemImage.h  ShmemImageRaw.h  VcamWin.cpp  VcamWinStandalone.cpp
trunk/tests/: demo.sh
trunk/wrapper/gui/: Vcam.h  gui.cpp
trunk/wrapper/linux/: VcamLinuxLoopback.cpp  VcamLinuxStandalone.cpp
trunk/wrapper/win32/: VcamWinStandalone.cpp
trunk/wrapper/win32/activex/: Dll.cpp  Filters.cpp  Filters.h  resources.h
wiki/: ProjectStatus.wiki
wrapper/gui/: Vcam.cpp  Vcam.h  gui.cpp
wrapper/linux/: VcamLinux.cpp  VcamLinuxLoopback.cpp  VcamLinuxStandalone.cpp
wrapper/win32/: VcamWin.cpp  VcamWinStandalone.cpp
wrapper/win32/activex/: Dll.cpp  Filters.cpp
